# Projects

./: .cursorignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AI_RULES.md  ARCHITECTURE.md  COLLECTION_CONTROL_IMPLEMENTATION_MAP_RU.md  COLLECTION_CONTROL_UNIFIED_RU.md  INTEGRATIONS_README.md  INVESTOR_DEMO.md  MASTER_PLAN.md  PROJECT_REGISTRY.md  README.md  TASK_QUEUE.md  alembic.ini  brace_balance.txt  package.json  pyproject.toml  run.sh
.cursor/: gsd-file-manifest.json  mcp.json  settings.json
.github/: pull_request_template.md
.planning/: PLATFORM-CORE-AUDIT.md  PLATFORM-CORE-PATH-PLAN.md  ROADMAP.md  STATE.md  config.json
alembic/: env.py
app/: main.py
docs/: AGENT_REGISTRY.md  ARCHIVE_AND_LEGACY_RU.md  B2B_AND_PRODUCTION_CORE_SPEC.md  CURSOR_AGENT_TOOLKIT.md  DOD_CHECKLIST.md  FEATURE_BENCHMARK_INTEGRATION.md  MIGRATION_FULL_CUTOVER.md  MVP_CONTRACT.md  NEXT_IMPROVEMENTS_PLAN.md  PLAN-phase2-repo-and-hub.md  PLAN-repo-hub-phase2.md  RUNBOOK.md  SUBMODULES.md
fashion-backend/: main.py
product-switcher/: .editorconfig  .gitignore  .htmlhintrc  AGENTS.md  README.md  index.html  package-lock.json  package.json  product-switcher.code-workspace  setup-video.sh
scripts/: archive-local-legacy-frontend.sh  bootstrap-backend-stack.sh  bootstrap-monorepo-dev.sh  check-dev-perf-merge-conflicts.sh  check-gsd-cursor-paths.sh  ci-platform-core-interactive-verify.sh  ci-platform-core-no-bootstrap-verify.sh  ci-platform-core-pg-primary-verify.sh  ci-platform-core-redis-verify.sh  ci-platform-core-verify.sh  commit-home-dev-optimization.sh  core-chain-demo.sh  core-chain-interactive.sh  core-db-up.sh  core-demo-urls.sh  core-dev.sh  core-enable-pg-primary.sh  core-lib.sh  core-platform-bootstrap.sh  core-prep.sh  core-restart.sh  core-status.sh  core-verify-interactive.sh  core-verify-no-bootstrap.sh  core-verify-pg-primary.sh  (+26 more)
(+7817 files in other folders)
