[tool.poetry]
name = "synth-1-backend"
version = "0.1.0"
description = "FastAPI Backend for Synth-1 Fashion OS"
authors = ["Petr <petr@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# passlib 1.7.x breaks bcrypt backend self-test with bcrypt>=4.1 (72-byte error)
bcrypt = ">=4.0.1,<4.1"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
loguru = "^0.7.2"
redis = "^5.0.1"
numpy = "^1.26.0"

[tool.poetry.group.ml.dependencies]
transformers = "^4.36.0"
torch = "^2.1.0"
faiss-cpu = "^1.7.4"
Pillow = "^10.0.0"
# styleformer = {git = "https://github.com/PrithivirajDamodaran/Styleformer.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
radon = "^6.0.1"
black = "^24.1.1"
mypy = "^1.8.0"
ruff = "^0.2.1"
pre-commit = "^3.6.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
